fixed form grid example layout bug

--- a/scss/theme/modules/_styleguide.scss
+++ b/scss/theme/modules/_styleguide.scss
@@ -24,8 +24,8 @@
 	}
 
 	.example-form-grid label {
-		padding-bottom: 0;
-		@include box-(12,.5,.5);
+		// padding-bottom: 0;
+		@include box-(12,1,1);
 	}
 
 //
@@ -37,25 +37,38 @@
 	.example-form-grid {
 
 		label {
-			@include box-(6,.5,.5);
+			@include box-(6,1,1);
 		}
 
-		.street,
+		.name {
+			@include box-(6,1,.5)
+		}
+
+		.email {
+			@include box-(6,.5,1)
+		}
+
+		.street {
+			@include box-(8,1,.5);
+		}
+
 		.city {
-			@include box-(8,.5,.5);
+			@include box-(8,.5,1);
 		}
 
-		.number,
+		.number {
+			@include box-(4,.5,1);
+		}
 		.zip-code {
-			@include box-(4,.5,.5);
+			@include box-(4,1,.5);
 		}
 
 		.full-width {
-			@include box-(12,.5,.5);
+			@include box-(12,1,1);
 		}
 
 		.oneliner .postfix {
-			@include box-(6,0,.5);
+			@include box-(6,0,1);
 
 			button {
 				@include postfix;
@@ -63,7 +76,7 @@
 		}
 
 		.oneliner .prefix {
-			@include box-(6,.5,0);
+			@include box-(6,1,0);
 
 			input {
 				@include prefix;
